# GraphicsEngine

./: CMakeLists.txt  README.md
include/glad/: glad.h
shaders/: basic.frag  basic.vert
src/: .gitignore  Primitives.cpp  Primitives.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  main.cpp
src/core/: Camera.h  Deltatime.h  Math.h  MathUtils.h  Stopwatch.h
src/engine/: Keybind.h  KeybindManager.cpp  KeybindManager.h  PlayerController.cpp  PlayerController.h
src/graphics/: Mesh.h  Primitives.cpp  Renderer.cpp  Renderer.h  RenderingHelper.cpp  RenderingHelper.h  Shader.cpp  Shader.h  Sprite.h  Texture.cpp  Texture.h  Vertex.h
